fixed form padding on mobile

--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -398,6 +398,8 @@
   display: none !important;
 }
 
+
+
 @media only screen and (max-width: 680px) {
 
     .formContainer {
@@ -425,13 +427,15 @@
     }
 
     .stepOneContainer, .stepTwoContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: stretch;
         min-width: 0;
-        width: 100%;
+        
     }
     
     .stepTwoSection {
-        min-width: 100vw;
-        padding: 0 1em;
+        min-width: 340px;
     }
 
     .tagContainer {
@@ -446,10 +450,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        min-width: 0;
         min-height: 0;
-        width: 100vw;
-        padding: 0 1em;
+        min-width: 340px;
       }
 
     .input {
@@ -478,4 +480,9 @@
     .ql-container {
         background-color: white !important;
     }
+    
+   
 }
+
+
+
